--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+* 1.1.0 *
+
+The current post release contains two small fixes. One of them is for a
+documentation formatting. Hence a manual page looks better and more
+understandable. Another fix is addressed to the configuration file parser. So,
+a speed of parsing is increased a little bit.
+
+
 * 1.1 *
 
 The dying is less informative now, when verbosity level set to zero. All
