The option --keywordize was renamed to --keywords
Signed-off-by: Andy Shevchenko <andy.shevchenko@gmail.com>

git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@592 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+* 1.2.0 *
+The option --keywordize was renamed to --keywords.
+
+
 * 1.1.0 *
 
 The current post release contains two small fixes. One of them is for a
