update AUTHORS file
Signed-off-by: Andy Shevchenko <andy.shevchenko@gmail.com>

git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@596 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,5 @@
-Zeus Panchenko <zeusATdnDOTfarlepDOTnet>
-Jabber: zeusATgnuDOTorgDOTua
-ICQ:198888060
+Zeus Panchenko <zeus.panchenko@gmail.com>
+Jabber: zeus@gnu.org.ua
 
-Andy Shevchenko <andyATsmileDOTorgDOTua>
-Jabber: andyDOTshevchenkoATgmailDOTcom
-ICQ:131403690
+Andy Shevchenko <andy.shevchenko@gmail.com>
+Jabber: andy.shevchenko@gmail.com
