--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
 * 1.2.0 *
-The option --keywordize was renamed to --keywords.
+The option --keywordize was renamed to --keywords. The behaviour of --dry-run
+option is fixed (there are bugs #539346 in Debian and #322623 in Ubuntu).
 
 
 * 1.1.0 *
