doc: update NEWS
The command line parser recognizes a new format of the option
parameters.

Signed-off-by: Andy Shevchenko <andy.shevchenko@gmail.com>

git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@624 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 * 1.2.0 *
 The option --keywordize was renamed to --keywords. The behaviour of --dry-run
-option is fixed (there are bugs #539346 in Debian and #322623 in Ubuntu).
+option is fixed (there are bugs #539346 in Debian and #322623 in Ubuntu). The
+command line framework now understands a new kind of the option string.
 
 
 * 1.1.0 *
