--- a/README
+++ b/README
@@ -168,9 +168,9 @@ INSTALLATION
 
 You can install RenRot to make it available for use by other users by typing
 the following:
-    perl Makefile.PL PREFIX=/usr/local
+    perl Makefile.PL DESTDIR=/usr/local
     make
-    make install PREFIX=/usr/local
+    make install DESTDIR=/usr/local
 
 Notes:
    i) You need root access for the last step above.
@@ -178,7 +178,7 @@ Notes:
       contain the necessary files to complete the first step above. But no
       worries: You can install script manually by moving 'renrot' to any
       directory in your current PATH.
- iii) You may choose any desired PREFIX by changing /usr/local at above
+ iii) You may choose any desired DESTDIR by changing /usr/local at above
       sample.
 
 RenRot is shipped with the built-in spec file and rpm package. In RPM-based
